
EXTRA_DIST = torture_hgs torture_msgs2 torture_sdps \
urls.txt froms.txt tos.txt contacts.txt vias.txt callids.txt \
recordroutes.txt routes.txt contenttypes.txt auths.txt wwwas.txt \
sip0 sip1 sip2 sip3 sip4 sip5 sip6 sip7 sip8 sip9 \
sip10  sip11  sip12  sip13  sip14  sip15  sip16  sip17  sip18  sip19 \
sip20  sip21  sip22  sip23  sip24  sip25  sip26  sip27  sip28  sip29 \
sip30  sip31  sip32  sip33  sip34  sip35  sip36  sip37  sip38  sip39 \
sip40  sip41  sip42  sip43  sip44  sip45  sip46  sip47  sip48  sip49 \
sip50  sip51  sip52  sip53  sip54  sip55  sip56  sip57  sip58  sip59 \
sip60  sip61  sip62  sip63  sip64  sip65  sip66  sip67  sip68  sip69 \
sip70  sip71  sip72  sip73  sip74  sip75  sip76  sip77  sip78  sip79 \
sip80  sip81  sip82  sip83  sip84  sip85  sip86  sip87  sip88 \
sip-malformed0 sip-malformed1 sip-malformed2 sip-malformed3 sip-malformed4 \
sip-malformed5 sip-malformed6  sip-malformed8 \
sdp0 sdp1 sdp2 sdp3 sdp4 sdp5 sdp6 sdp7 sdp8 sdp9 \
sdp10  sdp11  sdp12  sdp13  sdp14  sdp15
